make slight change...

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 <h1>it ain't a md file but this still totally works.</h1>
-<p>add your name here!!!</p>
+<p>add your name here!!! - here? You want me to add my name...HERE?</p>
 	</body>
 </html>
